2005-08-31 arne

	* new mouse handling (onMouseDown, onMouseUp, onMouseMoved, onMouseEntered, onMouseExited)
	  but the old mouse method is still working, if the new methods are not implemented by the super class
	* drawing is now triggered by system events, so drawing outside of the draw method is deprecated

		This means :
	  	- all class methods which took a CDrawContext pointer will be changed except the draw methods.
	  	- you call view->invalid () instead of view->setDirty (true) from the User Interface thread.
	  	- value changes from other threads will be checked on idle and the views are marked invalid.

		Benefits :
		- less hacks
		- less code
		- cleaner differentiation of drawing and user action.
		- works better with hosts which don't follow the VST spec.

	* added controlBeginEdit and controlEndEdit to CControlListener

2005-08-22 arne

	* branched for 3.0 (vstgui_300)
	* removed all MOTIF code
	* some code cleanup
	* set version to 3.5

**********************************************************************************************************************
VSTGUI 3.0 branch
**********************************************************************************************************************

2005-08-12 arne

	* initial support for X/Y mouse wheel (currently only macosx, don't know how ms windows handles this)
	
2005-07-29 arne

	* bugfix: CDrawContext doesn't remember font style and does not change the font if only the font style changed.
	* quartz: keyboard event handling works now, so that hosts will get all key events we don't handle.
	
2005-07-22 arne

	* quartz: little optimization in CDrawContext::beginCGContext
	* quartz: cleaned up the event handler
	* stop advancing focus if the last focusable control has focus.

2005-07-22 arne

	* fixed a regression bug in AEffGUIEditor, where idle() was not called
	* only CKnob and CSlider want focus, as they are the only controls handling key strokes.

2005-07-14 arne
